Template Form basic

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="container mt-5">
-  <app-reactive-forms></app-reactive-forms>
-  <!-- <app-template-form></app-template-form> -->
+  <!-- <app-reactive-forms></app-reactive-forms> -->
+  <app-template-form></app-template-form>
 </div>
