--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="container mt-5">
   <!-- <app-reactive-forms></app-reactive-forms> -->
   <!-- <app-template-form></app-template-form> -->
-  <app-postlist></app-postlist>
+  <!-- <app-postlist></app-postlist> -->
+  <app-error-handler></app-error-handler>
 </div>
